<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.scorekeeper.MainActivity">


    <TextView
        android:id="@+id/setNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:textSize="24sp"
        android:padding="4dp"
        android:textColor="#000000"
        android:text="@string/setNum"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/team_Name_A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/teamName1"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_Score_A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="4dp"
                android:layout_marginBottom="24dp"
                android:text="@string/teamScore"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                android:id="@+id/three_Points_A"
                style="@style/TeamButtonTheme"
                android:onClick="addOnePointA"
                android:text="@string/onePoint" />

            <Button
                android:id="@+id/two_Points_A"
                style="@style/TeamButtonTheme"
                android:onClick="redCardA"
                android:text="@string/redCard" />


        </LinearLayout>

        <View
            android:id="@+id/textureViewW"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/team_B"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/team_Name_B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/teamName2"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_Score_B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="4dp"
                android:layout_marginBottom="24dp"
                android:text="@string/teamScore"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                android:id="@+id/three_Points_B"
                style="@style/TeamButtonTheme"
                android:onClick="addOnePointB"
                android:text="@string/onePoint" />

            <Button
                android:id="@+id/two_Points_B"
                style="@style/TeamButtonTheme"
                android:onClick="redCardB"
                android:text="@string/redCard" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/reset_Score"
        android:layout_width="141dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="resetScore"
        android:text="@string/resetScore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.851" />

    <TableLayout
        android:layout_width="315dp"
        android:layout_height="183dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/reset_Score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.062">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffe57f"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    style="@style/TableRowTextView"
                    android:text="@string/setNum1"
                    android:textColor="#000000" />

                <View
                    android:id="@+id/textureViewR1"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray" />

                <TextView
                    style="@style/TableRowTextView"
                    android:text="@string/teamName1"
                    android:textColor="#000000" />

                <View
                    android:id="@+id/textureViewR2"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray" />

                <TextView
                    style="@style/TableRowTextView"
                    android:text="@string/teamName2"
                    android:textColor="#000000" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    style="@style/TableRowTextView"
                    android:text="@string/one"
                    android:textColor="#000000" />

                <View
                    android:id="@+id/textureViewR11"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/textScoreASetOne"
                    style="@style/TableRowTextView"
                    android:text=""
                    android:textColor="#000000" />

                <View
                    android:id="@+id/textureViewR22"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/textScoreBSetOne"
                    style="@style/TableRowTextView"
                    android:text=""
                    android:textColor="#000000" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    style="@style/TableRowTextView"
                    android:text="@string/two"
                    android:textColor="#000000" />

                <View
                    android:id="@+id/textureViewR13"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/textScoreASetTwo"
                    style="@style/TableRowTextView"
                    android:text=""
                    android:textColor="#000000" />

                <View
                    android:id="@+id/textureViewR23"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/textScoreBSetTwo"
                    style="@style/TableRowTextView"
                    android:text=""
                    android:textColor="#000000" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    style="@style/TableRowTextView"
                    android:text="@string/three"
                    android:textColor="#000000" />

                <View
                    android:id="@+id/textureViewR14"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/textScoreASetThree"
                    style="@style/TableRowTextView"
                    android:text=""
                    android:textColor="#000000" />

                <View
                    android:id="@+id/textureViewR24"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/textScoreBSetThree"
                    style="@style/TableRowTextView"
                    android:text=""
                    android:textColor="#000000" />
            </LinearLayout>

        </TableRow>
    </TableLayout>


</android.support.constraint.ConstraintLayout>
